--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,6 @@ html{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:#66C99C;
 }
-
 body{
     padding:0;
     margin:0;
@@ -185,7 +184,7 @@ body{
 }
 
 .menucontainer{
-    height:91vh;
+    max-height:91vh;
     overflow:auto;
     padding-top:40px;
     background:#f8f8f8;
