--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,10 @@ body{
       color:#777
   }
 
+  .misc_two{
+    font-size:12px; padding-top:10px;
+  }
+
   #forgetPassword{
       text-align: center;
       margin-top:15px;
@@ -183,6 +187,15 @@ body{
     text-shadow: none
 }
 
+.uploadPhoto{
+    color:#000; font-weight: bold
+}
+.uploadPhoto:hover{
+    text-decoration: underline;
+    color:#777;
+    text-shadow: none;
+}
+
 .menucontainer{
     max-height:91vh;
     overflow:auto;
@@ -193,6 +206,7 @@ body{
 .menu{
     list-style-type: none;
     margin-top:35px;
+    cursor: pointer
 }
 
 .menu li{
@@ -321,11 +335,13 @@ body{
     font-size:11px; 
     font-weight:700; 
     background:#fff;
+    color:#000;
 }
 .notification_value{
    padding:10px; 
    font-size:11px;  
    background:#fff;
+   color:#000;
 }
 .filter ul{
     list-style: none;
@@ -334,4 +350,14 @@ body{
 	padding:10px; 
 	font-size:11px; 
 	background:#fff;
+    color:#000;
+}
+
+.icons{
+    font-size:18px;
+    padding-right: 18px;
+    cursor: pointer;
+}
+.icons:last-child{
+    padding-right: 0px;
 }
